Cultibox (1.4.05) precise; urgency=low
    + Néttoyage des fonctions PHP et des locales non utilisées

-- Yann Genevois <yann.genevois@cultibox.fr> Mon July 28  15:35:15 CEST 2014


Cultibox (1.4.04) precise; urgency=low
    + Affichage du dernier jour possedant des logs après le chargement de logs
    + Correction d'un erreur jquery si le champ startdate est vide de l'affichage des logs
    + AJout des librairies jquery pour les pages welcome et cost
    + Ménage et réorganisation
    + Correction de la gestion des sessions 
    + Rechargement des logs si l'utilisateur enlève et replace la carte SD
    + Correction de l'affichage des résumés des régulations secondaires
    + L'affichage de la fenêtre des programmes journaliers n'apparaît pas dans le calendrier si aucun programme journalier n'a été défini
    + Il est impossible de choisir la méthode de calcul des options avançées de régulation si un seul capteur est sélectionné"
    + Correction de la vérification des mots de passe de la partie WIFI
    + La tolérance est prise en compte dans le calcul max et min de la régulation d'une prise dans le logiciel
    + Les fichiers log et power sont sauvegardés dans un repertoire tmp en cas de problèmes
    + Vérification de la présence de Javascript dans le navigateur
    + Suppréssion de l'option SHOW_POPUP et réorganisation de l'affichage des messages

-- Yann Genevois <yann.genevois@cultibox.fr> Sun July 20  13:39:17 CEST 2014


Cultibox (1.4.03) precise; urgency=low
    + Multiples debug

-- Yann Genevois <yann.genevois@cultibox.fr> Tue July 17  10:29:58 CEST 2014


Cultibox (1.4.02) precise; urgency=low
    + Correction de l'affichage et la gestion des programmes journaliers dans l'onglet programme
    + Correction de la déselection des courbes dans l'onglet logs
    + Affichage des informations de régulation secondaire dans le résumé de l'onglet programme

-- Yann Genevois <yann.genevois@cultibox.fr> Tue July 10  11:25:32 CEST 2014

